Crash in DependencyContext::remove_dependent_nmethod still happens

XMLWordPrintable

    • b23
    • generic
    • generic
    • Verified

      The fix for the following bug:

          JDK-8213565 Crash in DependencyContext::remove_dependent_nmethod

      is in jdk12-jdk.1005 and we're still seeing the same crash in jdk12-jdk.1008.

      The failure happened with the following test:

      java/util/ResourceBundle/Bug4177489Test.java

      However, we think that test is just a victim of a drive by shooting.

      Here's a snippet from a Mach5 task's stdout:

      jib > --------------------------------------------------
      jib > [2018-11-30 12:53:58,709] Agent[4]: stdout: #
      jib > [2018-11-30 12:53:58,711] Agent[4]: stdout: # A fatal error has been detected by the Java Runtime Environment:
      jib > [2018-11-30 12:53:58,711] Agent[4]: stdout: #
      jib > [2018-11-30 12:53:58,711] Agent[4]: stdout: # SIGSEGV (0xb) at pc=0x00007f374d48e668, pid=9075, tid=9098
      jib > [2018-11-30 12:53:58,711] Agent[4]: stdout: #
      jib > [2018-11-30 12:53:58,711] Agent[4]: stdout: # JRE version: OpenJDK Runtime Environment (12.0) (build 12-internal+0-jdk12-jdk.1008)
      jib > [2018-11-30 12:53:58,711] Agent[4]: stdout: # Java VM: OpenJDK 64-Bit Server VM (12-internal+0-jdk12-jdk.1008, mixed mode, tiered, compressed oops, g1 gc, linux-amd64)
      jib > [2018-11-30 12:53:58,711] Agent[4]: stdout: # Problematic frame:
      jib > [2018-11-30 12:53:58,717] Agent[4]: stdout: # V [libjvm.so+0x676668] DependencyContext::remove_dependent_nmethod(nmethod*)+0x188
      jib > [2018-11-30 12:53:58,717] Agent[4]: stdout: #
      jib > [2018-11-30 12:53:58,717] Agent[4]: stdout: # Core dump will be written. Default location: /scratch/opt/mach5/mesos/work_dir/slaves/2dd962d0-8988-479b-a804-57ab764ada59-S1373/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/e9e16200-375a-41ab-804a-e0f0079bb0ef/runs/bc936fc1-3757-4a70-a6b2-87032812c6a4/testOutput/test-support/jtreg_open_test_jdk_tier1_part2/scratch/0/core.9075
      jib > [2018-11-30 12:53:58,717] Agent[4]: stdout: #
      jib > [2018-11-30 12:53:58,717] Agent[4]: stdout: # An error report file with more information is saved as:
      jib > [2018-11-30 12:53:58,717] Agent[4]: stdout: # /scratch/opt/mach5/mesos/work_dir/slaves/2dd962d0-8988-479b-a804-57ab764ada59-S1373/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/e9e16200-375a-41ab-804a-e0f0079bb0ef/runs/bc936fc1-3757-4a70-a6b2-87032812c6a4/testOutput/test-support/jtreg_open_test_jdk_tier1_part2/scratch/0/hs_err_pid9075.log
      jib > [2018-11-30 12:53:58,717] Agent[4]: stdout: Compiled method (c1) 305495 4176 3 java.io.ObjectOutputStream::writeByte (9 bytes)
      jib > [2018-11-30 12:53:58,717] Agent[4]: stdout: total in heap [0x00007f373108d390,0x00007f373108d8f0] = 1376
      jib > [2018-11-30 12:53:58,717] Agent[4]: stdout: relocation [0x00007f373108d508,0x00007f373108d558] = 80
      jib > [2018-11-30 12:53:58,717] Agent[4]: stdout: main code [0x00007f373108d560,0x00007f373108d740] = 480
      jib > [2018-11-30 12:53:58,717] Agent[4]: stdout: stub code [0x00007f373108d740,0x00007f373108d7e8] = 168
      jib > [2018-11-30 12:53:58,717] Agent[4]: stdout: metadata [0x00007f373108d7e8,0x00007f373108d800] = 24
      jib > [2018-11-30 12:53:58,717] Agent[4]: stdout: scopes data [0x00007f373108d800,0x00007f373108d838] = 56
      jib > [2018-11-30 12:53:58,717] Agent[4]: stdout: scopes pcs [0x00007f373108d838,0x00007f373108d8c8] = 144
      jib > [2018-11-30 12:53:58,717] Agent[4]: stdout: dependencies [0x00007f373108d8c8,0x00007f373108d8d0] = 8
      jib > [2018-11-30 12:53:58,717] Agent[4]: stdout: nul chk table [0x00007f373108d8d0,0x00007f373108d8f0] = 32
      jib > [2018-11-30 12:53:58,717] Agent[4]: stdout: Compiled method (c1) 305496 4176 3 java.io.ObjectOutputStream::writeByte (9 bytes)
      jib > [2018-11-30 12:53:58,717] Agent[4]: stdout: total in heap [0x00007f373108d390,0x00007f373108d8f0] = 1376
      jib > [2018-11-30 12:53:58,717] Agent[4]: stdout: relocation [0x00007f373108d508,0x00007f373108d558] = 80
      jib > [2018-11-30 12:53:58,718] Agent[4]: stdout: main code [0x00007f373108d560,0x00007f373108d740] = 480
      jib > [2018-11-30 12:53:58,718] Agent[4]: stdout: stub code [0x00007f373108d740,0x00007f373108d7e8] = 168
      jib > [2018-11-30 12:53:58,718] Agent[4]: stdout: metadata [0x00007f373108d7e8,0x00007f373108d800] = 24
      jib > [2018-11-30 12:53:58,718] Agent[4]: stdout: scopes data [0x00007f373108d800,0x00007f373108d838] = 56
      jib > [2018-11-30 12:53:58,718] Agent[4]: stdout: scopes pcs [0x00007f373108d838,0x00007f373108d8c8] = 144
      jib > [2018-11-30 12:53:58,718] Agent[4]: stdout: dependencies [0x00007f373108d8c8,0x00007f373108d8d0] = 8
      jib > [2018-11-30 12:53:58,718] Agent[4]: stdout: nul chk table [0x00007f373108d8d0,0x00007f373108d8f0] = 32
      jib > [2018-11-30 12:53:58,718] Agent[4]: stdout: Compiled method (c1) 305496 4176 3 java.io.ObjectOutputStream::writeByte (9 bytes)
      jib > [2018-11-30 12:53:58,718] Agent[4]: stdout: total in heap [0x00007f373108d390,0x00007f373108d8f0] = 1376
      jib > [2018-11-30 12:53:58,718] Agent[4]: stdout: relocation [0x00007f373108d508,0x00007f373108d558] = 80
      jib > [2018-11-30 12:53:58,718] Agent[4]: stdout: main code [0x00007f373108d560,0x00007f373108d740] = 480
      jib > [2018-11-30 12:53:58,718] Agent[4]: stdout: stub code [0x00007f373108d740,0x00007f373108d7e8] = 168
      jib > [2018-11-30 12:53:58,718] Agent[4]: stdout: metadata [0x00007f373108d7e8,0x00007f373108d800] = 24
      jib > [2018-11-30 12:53:58,718] Agent[4]: stdout: scopes data [0x00007f373108d800,0x00007f373108d838] = 56
      jib > [2018-11-30 12:53:58,718] Agent[4]: stdout: scopes pcs [0x00007f373108d838,0x00007f373108d8c8] = 144
      jib > [2018-11-30 12:53:58,718] Agent[4]: stdout: dependencies [0x00007f373108d8c8,0x00007f373108d8d0] = 8
      jib > [2018-11-30 12:53:58,718] Agent[4]: stdout: nul chk table [0x00007f373108d8d0,0x00007f373108d8f0] = 32
      jib > [2018-11-30 12:53:58,722] Agent[4]: stdout: Compiled method (c1) 305500 4176 3 java.io.ObjectOutputStream::writeByte (9 bytes)
      jib > [2018-11-30 12:53:58,722] Agent[4]: stdout: total in heap [0x00007f373108d390,0x00007f373108d8f0] = 1376
      jib > [2018-11-30 12:53:58,722] Agent[4]: stdout: relocation [0x00007f373108d508,0x00007f373108d558] = 80
      jib > [2018-11-30 12:53:58,722] Agent[4]: stdout: main code [0x00007f373108d560,0x00007f373108d740] = 480
      jib > [2018-11-30 12:53:58,722] Agent[4]: stdout: stub code [0x00007f373108d740,0x00007f373108d7e8] = 168
      jib > [2018-11-30 12:53:58,722] Agent[4]: stdout: metadata [0x00007f373108d7e8,0x00007f373108d800] = 24
      jib > [2018-11-30 12:53:58,722] Agent[4]: stdout: scopes data [0x00007f373108d800,0x00007f373108d838] = 56
      jib > [2018-11-30 12:53:58,722] Agent[4]: stdout: scopes pcs [0x00007f373108d838,0x00007f373108d8c8] = 144
      jib > [2018-11-30 12:53:58,722] Agent[4]: stdout: dependencies [0x00007f373108d8c8,0x00007f373108d8d0] = 8
      jib > [2018-11-30 12:53:58,722] Agent[4]: stdout: nul chk table [0x00007f373108d8d0,0x00007f373108d8f0] = 32
      jib > [2018-11-30 12:53:58,738] Agent[4]: stdout: #
      jib > [2018-11-30 12:53:58,738] Agent[4]: stdout: # If you would like to submit a bug report, please visit:
      jib > [2018-11-30 12:53:58,738] Agent[4]: stdout: # http://bugreport.java.com/bugreport/crash.jsp
      jib > [2018-11-30 12:53:58,738] Agent[4]: stdout: #

      Yes, it was the agent thread that crashed and not the
      thread that was running the test.

      Update: Started this as a P2 since it is a tier1 failure.

            Assignee:
            Erik Ă–sterlund
            Reporter:
            Daniel Daugherty
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: