8214556: Crash in DependencyContext::remove_dependent_nmethod still happens

Reviewed-by: kvn, kbarrett